style: fix button off-center alignment

--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,7 @@ body, html {
 .mainContent {
   flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
